--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/style-log.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+	        <script type="text/javascript" src="../js/jquery.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
 </head>
 
