--- a/src/main/resources/templates/user/admin/createGame.html
+++ b/src/main/resources/templates/user/admin/createGame.html
@@ -17,19 +17,17 @@
 <link href="/css/style.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 <script type="text/javascript" src="/js/jquery.js"></script>
-<script type="text/javascript" src="/js/jquery.js"></script>
 <script>
 	$(document).ready(function() {
 		$('#addNewGame').click(function() {
 			var name = $('#name').val();
 			var category = $('#category').val();
 			var description = $('#description').val();
-			var img = $('#img').val();
 			
 			$.ajax({
 				method : 'POST',
 				url: '/user/admin/createGame',
-				data : JSON.stringify({name:name, category:category, description:description, img:img}),
+				data : JSON.stringify({name:name, category:category, description:description}),
 				contentType: 'application/json; charset=utf-8',
 				success: function() {
 					alert("Saved successfully");
@@ -44,17 +42,25 @@
 </script>
 </head>
 <body>
-	<h1>Create Game</h1>
-	<form enctype="multipart/form-data">
-		<label>Name</label> 
-			<input type="text" id="name" name="name">
-		<label>Category</label>
-			<input type="text" id="category" name="category">
-		<label>Description</label>
-			<input type="text" id="description" name="description"> 
-<!-- 		<label>Upload Image</label> -->
-<!-- 			<input type="file" id="img" name="img"> -->
-		<input type="button" id="addNewGame" value="Enviar">
+<div th:replace="/_t/nav" />
+	
+	<div class="container card col-lg-12 col-md-6 bg-dark text-light mb-2">
+	<h1 class="display-1">Crear Juego</h1>
+	<form>
+		<div class="form-group create-games">
+			<label>Nombre</label> 
+				<input type="text" id="name" name="name" class="form-control">
+		</div>
+		<div class="form-group create-games">
+			<label>Categoría</label>
+				<input type="text" id="category" name="category" class="form-control">
+		</div>
+		<div class="form-group create-games">
+			<label>Descripción</label>
+				<input type="text" id="description" name="description" class="form-control">
+		</div>
+		<input type="button" id="addNewGame" value="Enviar" class="btn btn-primary games-button">
 	</form>
-</body>
-</html>
+	</div>
+<div th:replace="/_t/footer" />
+<div th:replace="/_t/end" />
