--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -6,6 +6,7 @@
 						<td th:text="${game.category}" id="catjuego"th:value="${game.category}"></td>
 						<td th:text="${game.description}" id="descjuego"th:value="${game.description}"></td>
 						<td th:text="${game.img}" id="imgjuego"th:value="${game.img}"></td>
+						<td th:text="${game.punctuation}" id="puncjuego"th:value="${game.punctuation}"></td>
 					</tr>
 				</tbody>
 			</table>
