--- a/src/main/resources/templates/_t/nav.html
+++ b/src/main/resources/templates/_t/nav.html
@@ -14,15 +14,12 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
 						<li class="nav-item"><a class="nav-link active"
-							aria-current="page" href="#!">Inicio</a></li>
+							aria-current="page" href="/user/index">Inicio</a></li>
 
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
 							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<li><a class="dropdown-item" href="#!">MOBA</a></li>
-								<li><a class="dropdown-item" href="#!">Carreras</a></li>
-								<li><a class="dropdown-item" href="#!">Shooters</a></li>
 							</ul></li>
 						<li class="nav-item"><a class="nav-link"
 							href="/user/admin/getAllGame">Listado Juegos</a></li>
@@ -48,7 +45,7 @@
 			</div>
 		</nav>
 	</div>
-	<div th:unless="${session.user.role?.name == 'ADMIN'}">
+	<div th:if="${session.user.role?.name == 'USER'}">
 		<!--******USER******-->
 		<!-- Navigation-->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
