--- a/src/main/resources/templates/user/admin/getAllGame.html
+++ b/src/main/resources/templates/user/admin/getAllGame.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="" />
-<meta name="author" content="" />
-<title>GG - Genuine Gamers</title>
-<!-- Favicon-->
-<link rel="icon" type="image/x-icon" href="/img/logo.png" />
-<!-- Bootstrap icons-->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-	rel="stylesheet" />
-<!-- Core theme CSS (includes Bootstrap)-->
-<link href="/css/style.css" rel="stylesheet" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-<script type="text/javascript" src="/js/scripts.js"></script>
-</head>
-<body>
+<div th:replace="/_t/head" />
+<div th:replace="/_t/nav" />
+    <!--Juegos-->
+    <div class="container card col-lg-12 col-md-6 table-games bg-dark text-light">
+    <h1 class="display-1">Listado de Juegos</h1>
+    <div class="bg-dark table-responsive-xl table-responsive-lg table-responsive-md">
 	<table class="table table-dark">
 		<thead>
 			<tr>
@@ -40,7 +24,7 @@
 				<td th:text="${game.category}"></td>
 				<td th:text="${game.description}"></td>
 				<td><img th:src="@{'/img/'+${game.img}}" th:alt="${game.img}"
-					style=max-width:15%></td>
+					class="table-games-img"></td>
 				<td><a th:href="@{/user/admin/uploadImage/{id}(id=${game.id})}"
 					class="btn btn-primary">Upload Image</a>
 				<td><a th:href="@{/user/admin/updateGame/{id}(id=${game.id})}"
@@ -48,9 +32,12 @@
 				<td><a th:href="@{/user/admin/deleteGame/{id}(id=${game.id})}"
 					class="btn btn-danger">Delete</a></td>
 			</tr>
+			<tr>
+				<td colspan="8"><a href="/user/admin/createGame" class="btn btn-primary games-button">Crear</a><a href="/user/index" class="btn btn-primary table-games-button">Volver</a></td>
+			</tr>
 		</tbody>
 	</table>
-	<a href="/user/admin/createGame" class="btn btn-primary">Create</a>
-	<a href="/user/index" class="btn btn-primary">Volver</a>
-</body>
-</html>
+    </div>
+    </div>
+<div th:replace="/_t/footer" />
+<div th:replace="/_t/end" />
