Update datos user

--- a/src/main/resources/templates/user/perfil.html
+++ b/src/main/resources/templates/user/perfil.html
@@ -52,14 +52,14 @@
 						role="button" data-bs-toggle="dropdown" aria-expanded="false"><img
 							src="/img/perfil.png" class="perfil"></a>
 						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="ajustes.html"><img
+							<li><a class="dropdown-item" href="/user/ajustes"><img
 									class="tab-icon icon-ajustes" src="/img/ajustes.png">
 									Ajustes</a></li>
-							<li><a class="dropdown-item" href="#!"><img
+							<li><a class="dropdown-item" href="/user/perfil"><img
 									class="tab-icon icon-avatar" src="/img/avatar.png">
 									Perfil</a></li>
 							<li><hr class="dropdown-divider" /></li>
-							<li><a class="dropdown-item" href="#!"><img
+							<li><a class="dropdown-item" href="/logout"><img
 									class="tab-icon icon-logout" src="/img/logout.png">
 									Logout</a></li>
 						</ul></li>
