--- a/src/main/resources/templates/user/ajustes.html
+++ b/src/main/resources/templates/user/ajustes.html
@@ -23,7 +23,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/user/index">Inicio</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -37,10 +37,10 @@
                             <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><img src="/img/perfil.png" class="perfil"></a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="ajustes.html"><img class="tab-icon icon-ajustes" src="/img/ajustes.png">Ajustes</a></li>
-                                <li><a class="dropdown-item" href="#!"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!"><img class="tab-icon icon-logout" src="/img/logout.png"><button>Logout</button></a></li>
+                                <li><a class="dropdown-item" href="/user/ajustes"><img class="tab-icon icon-ajustes" src="/img/ajustes.png">Ajustes</a></li>
+                                <li><a class="dropdown-item" href="/user/perfil"><img class="tab-icon icon-avatar" src="/img/avatar.png"> Perfil</a></li>
+                                <li><hr class="dropdown-divider"/></li>
+                                <li><a class="dropdown-item" href="/logout"><img class="tab-icon icon-logout" src="/img/logout.png"><button>Logout</button></a></li>
                             </ul>
                         </li>
                     </form>
