--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -26,11 +26,10 @@
 <section class="py-5">
 	<div class="container px-4 px-lg-5 mt-5">
 		<div
-			class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
-			id="caja"></div>
+			class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center mt-1" id="caja"></div>
 		<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 			<div class="text-center">
-				<a class="btn btn-outline-dark mt-auto" onclick="caja2()">View
+				<a class="btn btn-outline-dark mt-auto mt-2" onclick="caja2()">View
 					More</a>
 			</div>
 		</div>
