--- a/src/main/resources/templates/user/admin/getGameOpinion.html
+++ b/src/main/resources/templates/user/admin/getGameOpinion.html
@@ -71,9 +71,9 @@
 	<!-- Section-->
 	<section class="bg-dark py-perfil d-flex flex-row justify-content-center alig-items-center" th:each="usuario:${user}">
 		<div class="container card col-lg-11 col-md-6">
-			<div class="row container">
-				<div class="col-lg-3 col-md-6 m-3">
-					<div class="card mt-1" style="width: 18rem;" th:each="game:${games}">
+			<div class="row container align-items-center justify-content-center">
+				<div class="col-lg-12 m-3 text-center">
+					<div class="card mt-1" style="width: 70%;" th:each="game:${games}">
 						<img th:src="@{'/img/'+${game.img}}" th:alt="${game.img}" class="card-img-top" alt="...">
 						<div class="card-body">
 							<h5 class="card-title" th:text="${game.name}"></h5>
@@ -84,26 +84,16 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-8 col-md-6 m-3">
+				<div class="col-lg-12 m-3">
 					<h2>Interacciones</h2>
-					<div class="card mt-2">
+					<div class="card mt-2" th:each="opinion:${opinions}">
 						<h5 class="card-header">Comentario</h5>
 						<div class="card-body">
-							<h5 class="card-title">Manolo(username)</h5>
-							<p class="card-text">Es un juego en el que la gente siempre
+							<h5 class="card-title" th:text="${opinion.user}">Manolo(username)</h5>
+							<p class="card-text" th:text="${opinion.description}">Es un juego en el que la gente siempre
 								trata de ayudar, me encanta por su comunidad</p>
 						</div>
 					</div>
-					<div class="card mt-2">
-						<h5 class="card-header">Comentario</h5>
-						<div class="card-body">
-							<h5 class="card-title">Pepe(username)</h5>
-							<p class="card-text">No me ha gustado por que
-								askjnfcijsdnfijsdbijcdbsjaihdijsabndjbasjidnasijdn y no se puede
-								volar. MALDITOS HACKERS DE M*****</p>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</div>
