--- a/src/main/resources/templates/_t/nav.html
+++ b/src/main/resources/templates/_t/nav.html
@@ -4,7 +4,7 @@
 		<!-- Navigation-->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container px-4 px-lg-5">
-				<a class="navbar-brand" href="user/index"><img src="/img/logo.png"></a>
+				<a class="navbar-brand" href="/user/index"><img src="/img/logo.png"></a>
 				<button class="navbar-toggler" type="button"
 					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 					aria-controls="navbarSupportedContent" aria-expanded="false"
