--- a/src/main/resources/templates/_t/nav.html
+++ b/src/main/resources/templates/_t/nav.html
@@ -4,7 +4,7 @@
 		<!-- Navigation-->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container px-4 px-lg-5">
-				<a class="navbar-brand" href=""><img src="/img/logo.png"></a>
+				<a class="navbar-brand" href="/user/index"><img src="/img/logo.png"></a>
 				<button class="navbar-toggler" type="button"
 					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 					aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -50,7 +50,7 @@
 		<!-- Navigation-->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container px-4 px-lg-5">
-				<a class="navbar-brand" href=""><img src="/img/logo.png"></a>
+				<a class="navbar-brand" href="/user/index"><img src="/img/logo.png"></a>
 				<button class="navbar-toggler" type="button"
 					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
 					aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -60,7 +60,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
 						<li class="nav-item"><a class="nav-link active"
-							aria-current="page" href="#!">Inicio</a></li>
+							aria-current="page" href="/user/index">Inicio</a></li>
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
 							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
