--- a/src/main/resources/templates/user/opinion.html
+++ b/src/main/resources/templates/user/opinion.html
@@ -1,37 +1,45 @@
-<div th:replace="/_t/head"/>
-<div th:replace="/_t/anonnav"/>
-<header class="bg-dark py-5" onload="caja2()">
-	<div class="container px-4 px-lg-5 my-5">
-		<div class="text-center text-white">
-			<h1 class="display-4 fw-bolder">Genuine Gamers</h1>
-			<p class="lead fw-normal text-white-50 mb-0">
-				No cumplimos propositos<br> <b>Desbloqueamos Logros</b>
-			</p>
-			
+<div th:replace="/_t/head" />
+<div th:replace="/_t/nav" />
+<!-- Section-->
+<section
+	class="bg-dark py-perfil d-flex flex-row justify-content-center alig-items-center">
+	<div class="container card col-lg-11 col-md-6">
+		<div class="row container align-items-center justify-content-center">
+			<div class="col-lg-12 m-3 text-center">
+				<div class="card mt-1" style="width: 70%;" th:each="game:${games}">
+					<img th:src="@{'/img/'+${game.img}}" th:alt="${game.img}"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<h5 class="card-title" th:text="${game.name}"></h5>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item" th:text="${game.category}"></li>
+						<li class="list-group-item" th:text="${game.description}"></li>
+						<li class="list-group-item" th:text="${game.punctuation}"></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
-</header>
-<!-- Section-->
-<section class="py-5">
-	<form th:object="${games}">
-		<input type="text" th:field="*{name}">
-	</form>
-	<table class="table table-dark">
-		<tbody>
-			<tr th:each="game:${games}">
-				<td th:text="${game.id}" id="idjuego" th:value="${game.id}"></td>
-				<td th:text="${game.name}" id="namejuego" th:value="${game.name}"></td>
-				<td th:text="${game.category}" id="catjuego"
-					th:value="${game.category}"></td>
-				<td th:text="${game.description}" id="descjuego"
-					th:value="${game.description}"></td>
-				<td><img th:src="@{'/img/'+${game.img}}" th:alt="${game.img}"
-					style="max-width: 15%"></td>
-				<td th:text="${game.punctuation}" id="puncjuego"
-					th:value="${game.punctuation}"></td>
-			</tr>
-		</tbody>
-	</table>
+	<div>
+		<div class="card mt-1" style="width: 70%;" th:each="game:${games}">
+			Escribe tu comentario
+			<form action="/user/comment" method="POST">
+				<input type="hidden" name="nombre" th:value="${game.name}">
+				<input type="text" name="texto"> <input type="submit"
+					value="Commentar">
+			</form>
+			<table>
+				<tbody>
+					<tr th:each="comment:${comments}">
+						<td th:text="${comment.text}"></td>
+						<td th:text="${comment.game.name}"></td>
+						<td th:text="${comment.user.username}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </section>
-<div th:replace="/_t/footer"/>
-<div th:replace="/_t/end"/>
+<div th:replace="/_t/footer" />
+<div th:replace="/_t/end" />
