Admin panel (Read & Delete)

--- a/src/main/resources/templates/_t/anonnav.html
+++ b/src/main/resources/templates/_t/anonnav.html
@@ -13,7 +13,7 @@
 				<li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
 				<li class="nav-item dropdown"><a
 					class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
-					role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
+					role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<li><a class="dropdown-item" href="#!">MOBA</a></li>
 						<li><a class="dropdown-item" href="#!">Carreras</a></li>
