--- a/src/main/resources/templates/_t/nav.html
+++ b/src/main/resources/templates/_t/nav.html
@@ -19,11 +19,12 @@
 
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
-							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							</ul></li>
 						<li class="nav-item"><a class="nav-link"
 							href="/user/admin/getAllGame">Listado Juegos</a></li>
+						<li class="nave-item"><a class="nav-link" href="/user/adminPanel/getAllUser">Admin Panel</a></li>
 					</ul>
 					<form class="d-flex" method="post" th:action="@{/logout}">
 						<li class="nav-item dropdown"><a
@@ -60,7 +61,7 @@
 
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
-							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorías</a>
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 							</ul></li>
 					</ul>
