--- a/src/main/resources/templates/user/admin/createGame.html
+++ b/src/main/resources/templates/user/admin/createGame.html
@@ -65,6 +65,7 @@
 			</div>
 			<input type="button" id="addNewGame" value="Enviar"
 				class="btn btn-primary games-button">
+		</form>
 	</div>
 	<div th:replace="/_t/footer" />
 	<div th:replace="/_t/end" />
