--- a/src/main/resources/templates/user/ajustes.html
+++ b/src/main/resources/templates/user/ajustes.html
@@ -18,7 +18,7 @@
 						class="ajustes-cajas">
 						<option value="value1" selected>Si</option>
 						<option value="value2">No</option>
-					</select> <br> ¿Quiere activar la recuperación de contraseña? <select
+					</select> <br> ¿Quiere activar la recuperaci&oacuten de contrase&ntildea? <select
 						name="rPwd" class="ajustes-cajas">
 						<option value="value1" selected>Si</option>
 						<option value="value2">No</option>
@@ -34,11 +34,11 @@
 					<input type="submit" value="Confirmar cambio" class="btn btn-dark">
 				</form>
 				<form action="/user/intermedio" method="post">
-					Cambiar de contraseña <br> <input type="pwd" name="pwd"
-						placeholder="Introduzca su nueva contraseña"
+					Cambiar de contrase&ntildea <br> <input type="pwd" name="pwd"
+						placeholder="Introduzca su nueva contrase&ntildea"
 						class="col-lg-12 ajustes-cajas" onkeyup="valpwd()"> <br>
 					<input type="text" name="pwd"
-						placeholder="Repita su nueva contraseña"
+						placeholder="Repita su nueva contrase&ntildea"
 						class="col-lg-12 ajustes-cajas" onblur="pwdError()"> <br>
 					<br> <input type="submit" value="Confirmar cambio"
 						class="btn btn-dark">
