--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -1,3 +1,4 @@
+
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${games}">
@@ -8,6 +9,8 @@
 			<td th:text="${game.description}" id="descjuego"
 				th:value="${game.description}"></td>
 			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"></td>
+			<td th:text="${game.punctuation}" id="puncjuego"
+				th:value="${game.punctuation}"></td>
 		</tr>
 	</tbody>
 </table>
@@ -26,10 +29,11 @@
 <section class="py-5">
 	<div class="container px-4 px-lg-5 mt-5">
 		<div
-			class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center mt-1" id="caja"></div>
+			class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center mt-2"
+			id="caja"></div>
 		<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 			<div class="text-center">
-				<a class="btn btn-outline-dark mt-auto mt-2" onclick="caja2()">View
+				<a class="btn btn-outline-dark mt-2" onclick="caja2()">View
 					More</a>
 			</div>
 		</div>
