--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>GG | Genuine Gamers</title>
 	<link rel="icon" type="image/x-icon" href="/img/logo.png" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,13 +11,14 @@
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/style-log.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+	        <script type="text/javascript" src="../js/jquery.js"></script>
     <script type="text/javascript" src="../js/scripts.js"></script>
 </head>
 <body>
 	<div class="container">
-		<div class="login-box">
+		<div class="login-box col-auto ">
 			<img src="../img/logo-f.png" class="logo">
-			<h1>Entre Aquí</h1>
+			<h1 class="mt-2">Entre Aquí</h1>
 			<form method="post" name="loginform" th:action="@{/auth/login-post}">
 				<label for="user">Usuario</label>
 				<input type="text" placeholder="Introduzca Usuario" id="user" name="username" onkeyup="valuser()" required minlength="6"
