--- a/src/main/resources/templates/user/admin/getAllGame.html
+++ b/src/main/resources/templates/user/admin/getAllGame.html
@@ -1,6 +1,25 @@
 <div th:replace="/_t/head" />
 <div th:replace="/_t/nav" />
 <!--Juegos-->
+<table class="table table-dark" style="display: none">
+	<tbody>
+		<tr th:each="game:${games}">
+			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.category}" id="catjuego"
+				th:value="${game.category}" class="Sfiltrar cat"></td>
+			<td th:text="${game.description}" id="descjuego"
+				th:value="${game.description}" class="Sfiltrar"></td>
+			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.punctuation}" id="puncjuego"
+				th:value="${game.punctuation}" class="Sfiltrar"></td>
+		</tr>
+	</tbody>
+</table>
+
 <div
 	class="container card col-lg-12 col-md-6 table-games bg-dark text-light">
 	<h1 class="display-1">Listado de Juegos</h1>
