--- a/src/main/resources/templates/user/admin/updateGame.html
+++ b/src/main/resources/templates/user/admin/updateGame.html
@@ -1,5 +1,24 @@
 <div th:replace="/_t/head" />
 <div th:replace="/_t/nav" />
+<table class="table table-dark" style="display: none">
+	<tbody>
+		<tr th:each="game:${games}">
+			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.category}" id="catjuego"
+				th:value="${game.category}" class="Sfiltrar cat"></td>
+			<td th:text="${game.description}" id="descjuego"
+				th:value="${game.description}" class="Sfiltrar"></td>
+			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.punctuation}" id="puncjuego"
+				th:value="${game.punctuation}" class="Sfiltrar"></td>
+		</tr>
+	</tbody>
+</table>
+
 <div class="container card col-lg-12 col-md-6 bg-dark text-light mb-2">
 	<h1 class="display-1">Actualizar Juego</h1>
 	<form method="post" th:object="${game}">
