--- a/src/main/resources/templates/_t/anonnav.html
+++ b/src/main/resources/templates/_t/anonnav.html
@@ -15,7 +15,7 @@
 					class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
 					role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown"
-						id="dropdown">
+						th:each="game:${games}" id="categoria">
 					</ul></li>
 			</ul>
 			<form class="d-flex">
