--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -22,7 +22,7 @@
 		<div class="login-box col-auto ">
 			<img src="../img/logo-f.png" class="logo">
 			<h1 class="mt-2">Entre Aquí</h1>
-			<form method="post" name="loginform" th:action="@{auth/login-post}">
+			<form method="post" name="loginform" th:action="@{/auth/login-post}">
 				<label for="user">Usuario</label> <input type="text"
 					placeholder="Introduzca Usuario" id="user" name="username"
 					onkeyup="valuser()" required minlength="6" maxlength="50">
