--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,5 +1,2 @@
-<div th:replace="/_t/head"/>
-<div th:replace="/_t/nav"/>
-<div th:replace="/_t/body"/>
-<div th:replace="/_t/footer"/>
-<div th:replace="/_t/end"/>
+
+<h1>Hola</h1>
