--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta name="description" content="" />
+<meta name="author" content="" />
+<title>GG - Genuine Gamers</title>
+<!-- Favicon-->
+<link rel="icon" type="image/x-icon" href="/img/logo.png" />
+<!-- Bootstrap icons-->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+	rel="stylesheet" />
+<!-- Core theme CSS (includes Bootstrap)-->
+<link href="/css/style.css" rel="stylesheet" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+<script type="text/javascript" src="/js/jquery.js"></script>
+<script type="text/javascript" src="/js/scripts.js"></script>
+</head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="container px-4 px-lg-5">
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,3 +56,20 @@
 		</div>
 	</div>
 </nav>
+<!-- Footer-->
+<footer class="py-5 bg-dark">
+	<div class="container">
+		<p class="m-0 text-center text-white">
+			Copyright &copy; GG Team 2021<br> <a
+				href="https://github.com/ProyectoReyFernando/GenuineGames"
+				title="github" class="fab fa-github" target="_blank"></a> <a
+				href="mailto:gg-team@genuinegamers.aaritmendi.es" title="mail"
+				class="fas fa-mail-bulk" target="_blank"></a>
+		</p>
+	</div>
+</footer>
+<!-- Bootstrap core JS-->
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
