--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,2 +1,118 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta name="description" content="" />
+<meta name="author" content="" />
+<title>GG - Genuine Gamers</title>
+<!-- Favicon-->
+<link rel="icon" type="image/x-icon" href="/img/logo.png" />
+<!-- Bootstrap icons-->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+	rel="stylesheet" />
+<!-- Core theme CSS (includes Bootstrap)-->
+<link href="/css/style.css" rel="stylesheet" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+<script type="text/javascript" src="/js/jquery.js"></script>
+<script type="text/javascript" src="/js/scripts.js"></script>
+</head>
+<body>
+	<div th:if="${session.user.role?.name == 'ADMIN'}">
+		<!--******ADMIN******-->
+		<!-- Navigation-->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container px-4 px-lg-5">
+				<a class="navbar-brand" href="/user/index"><img
+					src="/img/logo.png"></a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/user/index">Inicio</a></li>
 
-<h1>Hola</h1>
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown"
+								th:each="game:${games}" id="categoria">
+							</ul></li>
+						<li class="nav-item"><a class="nav-link"
+							href="/user/admin/getAllGame">Listado Juegos</a></li>
+						<li class="nave-item"><a class="nav-link"
+							href="/user/adminPanel/getAllUser">Admin Panel</a></li>
+					</ul>
+					<form class="d-flex" method="post" th:action="@{/logout}">
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false"><img
+								src="/img/perfil.png" class="perfil"></a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="/user/ajustes"><img
+										class="tab-icon icon-ajustes" src="/img/ajustes.png">
+										Ajustes</a></li>
+								<li><a class="dropdown-item" href="/user/perfil"><img
+										class="tab-icon icon-avatar" src="/img/avatar.png">
+										Perfil</a></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li><a class="dropdown-item" href="/logout"><img
+										class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
+							</ul></li>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</div>
+	<div th:if="${session.user.role?.name == 'USER'}">
+		<!--******USER******-->
+		<!-- Navigation-->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container px-4 px-lg-5">
+				<a class="navbar-brand" href="/user/index"><img
+					src="/img/logo.png"></a>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="/user/index">Inicio</a></li>
+
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown"
+								th:each="game:${games}" id="categoria">
+							</ul></li>
+					</ul>
+					<form class="d-flex" method="post" th:action="@{/logout}">
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false"><img
+								src="/img/perfil.png" class="perfil"></a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="/user/ajustes"><img
+										class="tab-icon icon-ajustes" src="/img/ajustes.png">
+										Ajustes</a></li>
+								<li><a class="dropdown-item" href="/user/perfil"><img
+										class="tab-icon icon-avatar" src="/img/avatar.png">
+										Perfil</a></li>
+								<li><hr class="dropdown-divider" /></li>
+								<li><a class="dropdown-item" href="/logout"><img
+										class="tab-icon icon-logout" src="/img/logout.png">Logout</a></li>
+							</ul></li>
+					</form>
+				</div>
+			</div>
+		</nav>
+	</div>
+	<!-- Bootstrap core JS-->
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
