--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,135 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="" />
-<meta name="author" content="" />
-<title>GG - Genuine Gamers</title>
-<!-- Favicon-->
-<link rel="icon" type="image/x-icon" href="/img/logo.png" />
-<!-- Bootstrap icons-->
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-	rel="stylesheet" />
-<!-- Core theme CSS (includes Bootstrap)-->
-<link href="/css/style.css" rel="stylesheet" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-<script type="text/javascript" src="/js/jquery.js"></script>
-<script type="text/javascript" src="/js/scripts.js"></script>
-</head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<div class="container px-4 px-lg-5">
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-			data-bs-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false"
-			aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-				<li class="nav-item"><a class="nav-link active"
-					aria-current="page" href="#!">Inicio</a></li>
-				<li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
-				<li class="nav-item dropdown"><a
-					class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
-					role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
-					<ul class="dropdown-menu" aria-labelledby="navbarDropdown"
-						th:each="game:${games}" id="categoria">
-					</ul></li>
-			</ul>
-			<form class="d-flex">
-				<li class="nav-item dropdown"><a
-					class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
-					role="button" data-bs-toggle="dropdown" aria-expanded="false"><img
-						src="img/perfil.png" class="perfil"></a>
-					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<li><a class="dropdown-item" th:href="@{/auth/login}"><img
-								class="tab-icon icon-avatar" src="img/avatar.png"> Login</a></li>
-						<li><a class="dropdown-item" th:href="@{/auth/register}"><img
-								class="tab-icon icon-logout" src="img/registro.png">
-								Registro</a></li>
-					</ul></li>
-			</form>
-		</div>
-	</div>
-</nav>
-<table class="table table-dark" style="display: none">
-	<tbody>
-		<tr th:each="game:${games}">
-			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"
-				class="Sfiltrar"></td>
-			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"
-				class="Sfiltrar"></td>
-			<td th:text="${game.category}" id="catjuego"
-				th:value="${game.category}" class="Sfiltrar cat"></td>
-			<td th:text="${game.description}" id="descjuego"
-				th:value="${game.description}" class="Sfiltrar"></td>
-			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"
-				class="Sfiltrar"></td>
-			<td th:text="${game.punctuation}" id="puncjuego"
-				th:value="${game.punctuation}" class="Sfiltrar"></td>
-		</tr>
-	</tbody>
-</table>
-<table class="table table-dark" style="display: none">
-	<tbody>
-		<tr th:each="game:${gamer}">
-			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"
-				class="filtrado"></td>
-			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"
-				class="filtrado"></td>
-			<td th:text="${game.category}" id="catjuego"
-				th:value="${game.category}" class="filtrado cat"></td>
-			<td th:text="${game.description}" id="descjuego"
-				th:value="${game.description}" class="filtrado"></td>
-			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"
-				class="filtrado"></td>
-			<td th:text="${game.punctuation}" id="puncjuego"
-				th:value="${game.punctuation}" class="filtrado"></td>
-		</tr>
-	</tbody>
-</table>
-<header class="bg-dark py-5" onload="start()">
-	<div class="container px-4 px-lg-5 my-5">
-		<div class="text-center text-white">
-			<h1 class="display-4 fw-bolder">Genuine Gamers</h1>
-			<p class="lead fw-normal text-white-50 mb-0">
-				No cumplimos propositos<br> <b>Desbloqueamos Logros</b>
-			</p>
-
-		</div>
-	</div>
-</header>
-<!-- Section-->
-<section class="py-5">
-	<div class="container px-4 px-lg-5 mt-5">
-		<div
-			class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
-			id="caja"></div>
-		<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-			<div class="text-center">
-				<a class="btn btn-outline-dark mt-2" onclick="caja2()">View More</a>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- Footer-->
-<footer class="py-5 bg-dark">
-	<div class="container">
-		<p class="m-0 text-center text-white">
-			Copyright &copy; GG Team 2021<br> <a
-				href="https://github.com/ProyectoReyFernando/GenuineGames"
-				title="github" class="fab fa-github" target="_blank"></a> <a
-				href="mailto:gg-team@genuinegamers.aaritmendi.es" title="mail"
-				class="fas fa-mail-bulk" target="_blank"></a>
-		</p>
-	</div>
-</footer>
-<!-- Bootstrap core JS-->
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+<div th:replace="_t/head"/>
