--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -16,6 +16,7 @@
 		</tr>
 	</tbody>
 </table>
+
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${gamer}">
@@ -53,7 +54,8 @@
 			id="caja"></div>
 		<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 			<div class="text-center">
-				<a class="btn btn-outline-dark mt-2" onclick="caja2()">View More</a>
+				<a class="btn btn-outline-dark mt-2" onclick="caja2()">View
+					More</a>
 			</div>
 		</div>
 	</div>
