--- a/src/main/resources/templates/user/admin/uploadImage.html
+++ b/src/main/resources/templates/user/admin/uploadImage.html
@@ -1,5 +1,5 @@
-<div th:replace="/_t/head" />
-<div th:replace="/_t/nav" />
+<div th:replace="_t/head" />
+<div th:replace="_t/nav" />
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${games}">
@@ -32,5 +32,5 @@
 		<input type="submit" value="Enviar" class="btn btn-primary games-button">
 	</form>
 	</div>
-<div th:replace="/_t/footer" />
-<div th:replace="/_t/end" />
+<div th:replace="_t/footer" />
+<div th:replace="_t/end" />
