--- a/src/main/resources/templates/user/admin/createGame.html
+++ b/src/main/resources/templates/user/admin/createGame.html
@@ -66,7 +66,7 @@
 </table>
 
 <body>
-	<div th:replace="/_t/nav" />
+	<div th:replace="_t/nav" />
 	<div class="container card col-lg-12 col-md-6 bg-dark text-light mb-2">
 		<h1 class="display-1">Crear Juego</h1>
 		<form>
