--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -35,7 +35,7 @@
 		</tr>
 	</tbody>
 </table>
-<header class="bg-dark py-5" onload="start()">
+<header class="bg-dark py-5" onload="alert()">
 	<div class="container px-4 px-lg-5 my-5">
 		<div class="text-center text-white">
 			<h1 class="display-4 fw-bolder">Genuine Gamers</h1>
@@ -54,8 +54,7 @@
 			id="caja"></div>
 		<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
 			<div class="text-center">
-				<a class="btn btn-outline-dark mt-2" onclick="caja2()">View
-					More</a>
+				<a class="btn btn-outline-dark mt-2" onclick="caja2()">View More</a>
 			</div>
 		</div>
 	</div>
