--- a/src/main/resources/templates/_t/anonnav.html
+++ b/src/main/resources/templates/_t/anonnav.html
@@ -14,8 +14,9 @@
 				<li class="nav-item dropdown"><a
 					class="nav-link dropdown-toggle" id="navbarDropdown" href="#"
 					role="button" data-bs-toggle="dropdown" aria-expanded="false">Categor&iacuteas</a>
-							<ul  class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropdown">
-							</ul></li>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdown"
+						id="categoria">
+					</ul></li>
 			</ul>
 			<form class="d-flex">
 				<li class="nav-item dropdown"><a
