--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -21,26 +21,25 @@
 	<div class="registro-box col-auto">
 		<img src="../img/logo-f.png" class="logo">
 		<h2>Registrese Aquí</h2>
-		<form method="post" name="registroform" th:action="@{/auth/register}"
-			th:object="${user}">
+		<form method="post" name="registroform">
 			<label for="user">Usuario</label> <input type="text"
-				th:field="*{username}" placeholder="Introduzca Usuario" id="user"
+				 placeholder="Introduzca Usuario" id="user"
 				onkeyup="valuser()" required minlength="6" maxlength="50"
 				value="Antonio"> <label for="pwd">Contraseña</label> <input
-				type="password" th:field="*{pwd}"
+				type="password"
 				placeholder="Introduzca Contraseña" onkeyup="valpwd()" id="pwd"
 				required minlength="6" maxlength="14"> <label for="cpwd">Vuelva
 				a introducir la contraseña</label> <input type="password"
 				placeholder="Introduzca Contraseña" onchange="valcpwd()"
 				onblur="pwdError()" id="cpwd" required minlength="6" maxlength="14">
 			<label for="tlf">Teléfono</label> <input type="text"
-				th:field="*{tlf}" placeholder="Introduzca Teléfono"
+			 placeholder="Introduzca Teléfono"
 				onkeyup="valtlf()" id="tlf" required minlength="9" maxlength="9"
 				value="666666666"> <label for="mail">E-mail</label> <input
-				type="text" th:field="*{mail}" placeholder="Introduzca E-mail"
+				type="text"  placeholder="Introduzca E-mail"
 				onkeyup="valmail()" id="mail" required minlength="3" maxlength="50"
 				value="pepe@gmail.es"> <label for="fnac">Fecha de
-				Nacimiento</label> <input type="date" th:field="*{fnac}"
+				Nacimiento</label> <input type="date"
 				placeholder="Introduzca su Fecha de Nacimiento" onblur="valdate()"
 				id="date" required value="1999-12-04"> <label for="sex">Sexo</label>
 			<br>
@@ -53,8 +52,10 @@
 					name="sex" onchange="valsex()" required>
 			</div>
 			<button id="submit" value="Registrate" onclick="valf()">Registrate</button>
-			<br> <a th:href="@{/auth/login}" class="mt-2">Volver al
+			<br> <a class="mt-2" href="login">Volver al
 				Login</a>
+			<br> <a class="mt-2" href="/">Volver al
+				inicio</a>
 		</form>
 	</div>
 </body>
