--- a/src/main/resources/templates/user/admin/createGame.html
+++ b/src/main/resources/templates/user/admin/createGame.html
@@ -84,6 +84,8 @@
 			</div>
 			<input type="button" id="addNewGame" value="Enviar"
 				class="btn btn-primary games-button">
+
+		</form>
 	</div>
-	<div th:replace="/_t/footer" />
-	<div th:replace="/_t/end" />
+<div th:replace="/_t/footer" />
+<div th:replace="/_t/end" />
