--- a/src/main/resources/templates/user/admin/updateGame.html
+++ b/src/main/resources/templates/user/admin/updateGame.html
@@ -25,7 +25,15 @@
 		<input type="hidden" th:field="*{id}">
 		<div class="form-group create-games">
 			<label>Nuevo nombre</label> <input type="text" name="name"
-				class="form-control" placeholder="*{name}">
+				class="form-control">
+		</div>
+		<div class="form-group create-games">
+			<label>Category</label> <input type="text" id="category"
+				name="category" class="form-control">
+		</div>
+		<div class="form-group create-games">
+			<label>Description</label> <input type="text" id="description"
+				name="description" class="form-control">
 		</div>
 		<div class="form-group create-games">
 			<label>Category</label> <input type="text" id="category"
