Prueba final Heroku

--- a/src/main/resources/templates/user/admin/createGame.html
+++ b/src/main/resources/templates/user/admin/createGame.html
@@ -64,7 +64,6 @@
 		</tr>
 	</tbody>
 </table>
-
 <body>
 	<div th:replace="/_t/nav" />
 	<div class="container card col-lg-12 col-md-6 bg-dark text-light mb-2">
@@ -87,5 +86,5 @@
 
 		</form>
 	</div>
-<div th:replace="/_t/footer" />
-<div th:replace="/_t/end" />
+<div th:replace="_t/footer" />
+<div th:replace="_t/end" />
