--- a/src/main/resources/templates/user/admin/updateGame.html
+++ b/src/main/resources/templates/user/admin/updateGame.html
@@ -1,5 +1,5 @@
-<div th:replace="/_t/head" />
-<div th:replace="/_t/nav" />
+<div th:replace="_t/head" />
+<div th:replace="_t/nav" />
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${games}">
@@ -18,13 +18,12 @@
 		</tr>
 	</tbody>
 </table>
-
 <div class="container card col-lg-12 col-md-6 bg-dark text-light mb-2">
 	<h1 class="display-1">Actualizar Juego</h1>
 	<form method="post" th:object="${game}">
 		<input type="hidden" th:field="*{id}">
 		<div class="form-group create-games">
-			<label>Nuevo nombre</label> <input type="text" name="name"
+			<label>New Name</label> <input type="text" name="name"
 				class="form-control">
 		</div>
 		<div class="form-group create-games">
@@ -35,18 +34,9 @@
 			<label>Description</label> <input type="text" id="description"
 				name="description" class="form-control">
 		</div>
-		<div class="form-group create-games">
-			<label>Category</label> <input type="text" id="category"
-				name="category" class="form-control" placeholder=${game.category}>
-		</div>
-		<div class="form-group create-games">
-			<label>Description</label> <input type="text" id="description"
-				name="description" class="form-control"
-				placeholder="${game.description}">
-		</div>
 		<input type="submit" value="Enviar"
 			class="btn btn-primary games-button">
 	</form>
 </div>
-<div th:replace="/_t/footer" />
-<div th:replace="/_t/end" />
+<div th:replace="_t/footer" />
+<div th:replace="_t/end" />
