--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
-<div th:replace="/_t/head"/>
-<div th:replace="/_t/anonnav"/>
-<div th:replace="/_t/body"/>
-<div th:replace="/_t/footer"/>
-<div th:replace="/_t/end"/>
+<div th:replace="_t/head"/>
+<div th:replace="_t/anonnav"/>
+<div th:replace="_t/body"/>
+<div th:replace="_t/footer"/>
+<div th:replace="_t/end"/>
 
