--- a/src/main/resources/templates/user/admin/getAllGame.html
+++ b/src/main/resources/templates/user/admin/getAllGame.html
@@ -1,5 +1,5 @@
-<div th:replace="/_t/head" />
-<div th:replace="/_t/nav" />
+<div th:replace="_t/head" />
+<div th:replace="_t/nav" />
 <!--Juegos-->
 <table class="table table-dark" style="display: none">
 	<tbody>
@@ -19,7 +19,6 @@
 		</tr>
 	</tbody>
 </table>
-
 <div
 	class="container card col-lg-12 col-md-6 table-games bg-dark text-light">
 	<h1 class="display-1">Listado de Juegos</h1>
@@ -62,5 +61,5 @@
 			</tbody>
 		</table>
 	</div>
-<div th:replace="/_t/footer" />
-<div th:replace="/_t/end" />
+<div th:replace="_t/footer" />
+<div th:replace="_t/end" />
