--- a/src/main/resources/templates/user/adminPanel/getAllUser.html
+++ b/src/main/resources/templates/user/adminPanel/getAllUser.html
@@ -3,19 +3,26 @@
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${games}">
-			<td th:text="${game.id}" id="idjuego" th:value="${game.id}" class="Sfiltrar"></td>
-			<td th:text="${game.name}" id="namejuego" th:value="${game.name}" class="Sfiltrar"></td>
-			<td th:text="${game.category}" id="catjuego" th:value="${game.category}" class="Sfiltrar cat"></td>
-			<td th:text="${game.description}" id="descjuego" th:value="${game.description}" class="Sfiltrar"></td>
-			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}" class="Sfiltrar"></td>
-			<td th:text="${game.punctuation}" id="puncjuego" th:value="${game.punctuation}" class="Sfiltrar"></td>
+			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.category}" id="catjuego"
+				th:value="${game.category}" class="Sfiltrar cat"></td>
+			<td th:text="${game.description}" id="descjuego"
+				th:value="${game.description}" class="Sfiltrar"></td>
+			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"
+				class="Sfiltrar"></td>
+			<td th:text="${game.punctuation}" id="puncjuego"
+				th:value="${game.punctuation}" class="Sfiltrar"></td>
 		</tr>
 	</tbody>
 </table>
-
-<div class="container card col-lg-12 col-md-6 table-games bg-dark text-light">
+<div
+	class="container card col-lg-12 col-md-6 table-games bg-dark text-light">
 	<h1 class="display-1">Listado de Usuarios</h1>
-	<div class="bg-dark table-responsive-xl table-responsive-lg table-responsive-md">
+	<div
+		class="bg-dark table-responsive-xl table-responsive-lg table-responsive-md">
 		<table class="table table-dark">
 			<thead>
 				<tr>
@@ -37,13 +44,14 @@
 					<td th:text="${usuario.fnac}"></td>
 					<td th:text="${usuario.sex}"></td>
 					<td th:text="${usuario.role.name}"></td>
-					<td><a th:href="@{/user/adminPanel/deleteUser/{id}(id=${usuario.id})}"
-							class="btn btn-danger">Delete</a></td>
-					<td><a th:href="@{/user/adminPanel/deleteComment/{id}(id=${usuario.id})}"
-							class="btn btn-danger">Delete Comments</a></td>
+					<td><a
+						th:href="@{/user/adminPanel/deleteUser/{id}(id=${usuario.id})}"
+						class="btn btn-danger">Delete</a></td>
+					<td><a
+						th:href="@{/user/adminPanel/deleteComment/{id}(id=${usuario.id})}"
+						class="btn btn-danger">Delete Comments</a></td>
 			</tbody>
 		</table>
 	</div>
-
-	<div th:replace="_t/footer" />
-	<div th:replace="_t/end" />
+<div th:replace="_t/footer" />
+<div th:replace="_t/end" />
