--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -54,7 +54,7 @@
 			<button id="submit" value="Registrate" onclick="valf()">Registrate</button>
 			<br> <a th:href="@{/auth/login}" class="mt-2">Volver al
 				Login</a>
-			<br> <a th:href="@{/index}" class="mt-2">Inicio</a>
+			<br> <a th:href="@{/}" class="mt-2">Inicio</a>
 		</form>
 	</div>
 </body>
