--- a/src/main/resources/templates/user/ajustes.html
+++ b/src/main/resources/templates/user/ajustes.html
@@ -42,10 +42,10 @@
 				</form>
 				<form action="/user/intermedio" method="post"
 					class="form-group mt-3">
-					<label>Cambiar de contrase&ntildea </label> <input type="pwd" name="pwd"
+					<label>Cambiar de contraseña </label> <input type="pwd" name="pwd"
 						placeholder="Introduzca su nueva contrase&ntildea"
 						class="form-control mt-2" onkeyup="valpwd()"> <input
-						type="text" name="pwd" placeholder="Repita su nueva contrase&ntildea"
+						type="text" name="pwd" placeholder="Repita su nueva contraseña"
 						class="form-control" onblur="pwdError()"> <input
 						type="submit" value="Confirmar cambio" class="btn btn-dark mt-1">
 				</form>
