Cambios en heroku

--- a/src/main/resources/templates/user/ajustes.html
+++ b/src/main/resources/templates/user/ajustes.html
@@ -43,7 +43,7 @@
 				<form action="/user/intermedio" method="post"
 					class="form-group mt-3">
 					<label>Cambiar de contraseña </label> <input type="pwd" name="pwd"
-						placeholder="Introduzca su nueva contrase&ntildea"
+						placeholder="Introduzca su nueva contraseña"
 						class="form-control mt-2" onkeyup="valpwd()"> <input
 						type="text" name="pwd" placeholder="Repita su nueva contraseña"
 						class="form-control" onblur="pwdError()"> <input
@@ -58,7 +58,7 @@
 				</form>
 				<form action="/user/intermedio" method="post"
 					class="form-group mt-3">
-					<label>Cambiar de Telefono</label><input type="text" name="tel"
+					<label>Cambiar de Teléfono</label><input type="text" name="tel"
 						placeholder="Introduzca su nuevo correo" class="form-control mt-2"
 						onclick="valf()"> <input type="submit"
 						value="Confirmar cambio" class="btn btn-dark mt-1">
